--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3305,7 +3305,7 @@
 /* Banner */
 
 	#banner {
-		background-color: #3498db;
+		background-color: #b30000;
 		color: rgba(255, 255, 255, 0.75);
 		text-align: center;
 		cursor: default;
